--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,14 @@
 	src: url("../fonts/subset-HelveticaNeue.eot");
 	src: url("../fonts/subset-HelveticaNeue.eot?#iefix") format("embedded-opentype"),
 		url("../fonts/subset-HelveticaNeue.woff") format("woff"),
-		url("../fonts/subset-HelveticaNeue.ttf") format("truetype");
+		url("../fonts/subset-HelveticaNeue.ttf") format("truetype"),
+		url("../fonts/subset-HelveticaNeue.svg#HelveticaNeue") format("svg");
 	font-weight: normal;
 	font-style: normal;
 }
 
 body{
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", Arial, sans-serif;
   font-size: 14px;
   line-height: 16px;
   background: url("../img/background2.png");
