--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body{
 
 .wrapper {
   background: url("../img/background.jpg") no-repeat;
+  background-size: cover;
   width: 1215px;
   height: 1028px;
   margin: 0 auto;
